syntax = "proto3";

option java_multiple_files = true;
option java_package = "co.elastic.apm.agent.grpc.v1_23_0.testapp.generated";

package helloworld;

service Hello {
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

message HelloRequest {
    string userName = 1;
    int32 depth = 2;
}

message HelloReply {
    string message = 1;
}
